# xv6.rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs  justfile  rust-toolchain.toml  x86_64-xv6.json
.cargo/: config.toml
boot/: memory.x
crates/riscv-rt/: link.x.in
crates/rv64/: Cargo.toml
crates/rv64/src/: insn.rs  lib.rs  reg.rs  vm.rs
crates/rv64/src/insn/: csr.rs  m.rs  reg.rs  s.rs  u.rs
crates/rv64/src/reg/: m.rs  s.rs
crates/rv64/src/vm/: pte.rs  schema.rs  sv39.rs  sv48.rs  sv57.rs
crates/rv64/src/vm/schema/: sv39.rs  sv48.rs  sv57.rs
scripts/: setup.sh
src/: arch.rs  asm.rs  io.rs  lib.rs  main.rs  mem.rs  print.rs  proc.rs  sbi.rs  serial.rs  sleeplock.rs  spinlock.rs  test.rs  vga.rs
src/arch/: interrupt.rs  port.rs  rv64.rs  x86_64.rs
src/arch/generic/: vm.rs
src/arch/rv64/: def.rs  interrupt.rs  trampoline.rs  trap.rs  vm.rs
src/arch/x86_64/: gdt.rs  interrupts.rs  port.rs  vm.rs
src/asm/: gdt.rs  x86_64.rs
src/io/: console.rs  uart.rs
src/mem/: alloc.rs  uvm.rs
src/proc/: cpu.rs  state.rs  switch.rs
src/vga/: buffer.rs  color.rs  print.rs
tests/: basic_boot.rs  heap_alloc.rs  should_panic.rs  stack_overflow.rs
