[package]
name = "xv6"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
# Comment it to avoid cargo test error
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bootimage]
test-args = [
    # map the device isa-debug-exit I/O port at address 0xf4 with port size 0x04 bytes
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    # enable the serial device and redirect the output to the stdio
    "-serial",
    "stdio",
    # disable display vga window when running tests
    "-display",
    "none",
]
test-success-exit-code = 33 # specify success exit code `(0x10 << 1) | 1`(33)
test-timeout = 300 # specify timeout in seconds

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false

[[bin]]
name = "xv6"
# test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
int-enum = "1.0.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
