[package]
name = "xv6"
version = "0.1.0"
edition = "2021"

# the profile used for `cargo build`
[profile.dev]
# Comment it to avoid cargo test error
# panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[workspace]
members = ["crates/rv64"]
default-members = ["."]
resolver = "2"

[workspace.dependencies]
rv64 = { path = "crates/rv64" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "should_panic"
# harness = false
# [[test]]
# name = "stack_overflow"
# harness = false

[[bin]]
name = "xv6"
# test = false
bench = false

[dependencies]
riscv-rt = "0.12.2"
